doing ride-service test